# C.A.T_Astrbot_MCP

./: .env.example  .gitignore  DEPLOY.md  LICENSE  README.md  pyproject.toml
src/njust_schedule_mcp/: __init__.py  cache.py  config.py  image_gen.py  server.py
src/njust_schedule_mcp/portal/: __init__.py  captcha.py  client.py  parsers.py
