[project]
name = "njust-schedule-mcp"
version = "0.1.0"
description = "NJUST 教务系统 MCP 服务器 - 课表/成绩/考试查询，适配 AstrBot"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["mcp", "astrbot", "njust", "schedule", "grade", "exam"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]
dependencies = [
    "fastmcp>=2.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "ddddocr>=1.4.11",
    "Pillow>=10.0.0",
]

[project.scripts]
njust-schedule-mcp = "njust_schedule_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/njust_schedule_mcp"]
